Some improvements to resposiveness of website. Include lower delay time between sliding in logos. Also centered all the logos. Added a delay to the animation to make sure that it has some time to fully disappear and reappear. Added padding to github-repo. Increased padding betwen sections. The scripts.js was reformatted to fit format and increase readiability. Added navbar to Real_Stats.html. Separated sections for higher legibility. Added video section to include a video about how the software works. Added section on which technologies were used during the project. Only few changes to Main_website.html caurosel speed and formatting for the third paragraph.

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -41,7 +41,7 @@ p {
 
 section {
     padding-top: 25vh;
-    padding-bottom: 25vh;
+    padding-bottom: 30vh;
 }
 
 figure {
@@ -106,7 +106,7 @@ figcaption {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    padding-bottom: 5vh;
 }
 
 .GitHub-Repo button {
@@ -152,14 +152,13 @@ figcaption {
     opacity: 0;
     filter: blur(5px);
     transform: translateX(-100%);
-    transition: all 1s;
+    transition: all 1s 0.2s;
 }
 
 @media(prefers-reduced-motion) {
     .hidden {
         transition: none;
     }
-
 }
 
 .show {
@@ -174,6 +173,8 @@ figcaption {
     display: flex;
     flex-wrap: wrap;
     text-align: justify;
+    justify-content: center;
+    align-items: center;
 }
 
 .logos img {
@@ -189,41 +190,41 @@ figcaption {
 }
 
 .logo:nth-child(2) {
-    transition-delay: 200ms;
+    transition-delay: 100ms;
 }
 
 .logo:nth-child(3) {
-    transition-delay: 400ms;
+    transition-delay: 200ms;
 }
 
 .logo:nth-child(4) {
-    transition-delay: 600ms;
+    transition-delay: 300ms;
 }
 
 .logo:nth-child(5) {
-    transition-delay: 800ms;
+    transition-delay: 400ms;
 }
 
 .logo:nth-child(6) {
-    transition-delay: 1000ms;
+    transition-delay: 500ms;
 }
 
 .logo:nth-child(7) {
-    transition-delay: 1200ms;
+    transition-delay: 600ms;
 }
 
 .logo:nth-child(8) {
-    transition-delay: 1400ms;
+    transition-delay: 700ms;
 }
 
 .logo:nth-child(9) {
-    transition-delay: 1600ms;
+    transition-delay: 800ms;
 }
 
 .logo:nth-child(10) {
-    transition-delay: 1800ms;
+    transition-delay: 900ms;
 }
 
 .logo:nth-child(11) {
-    transition-delay: 2000ms;
+    transition-delay: 1000ms;
 }
